# EEI2_ejercicios

./: README.md  pyproject.toml
ejercicios/: modulo1.ipynb  modulo2.ipynb
ejercicios/data/processed/: player_valuations_log_mean.csv
ejercicios/scripts/: player_valuations.py
